--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,8 @@
+<img id= "burger_pic" src="/assets/img/burger_name.jpg" alt="burger">
 <div class="container">
   <div class="row">
     <div class="col-md-12" id="title">
-      <h1>WELCOME TO EAT DA Burger</h1>
+      <h1>WELCOME TO EAT DA BURGER</h1>
       <p> List down the burgers you want to eat and will keep them tracked
 
       </p>
@@ -18,7 +19,7 @@
 
         </div>
         <div class="col-md-3">
-          <button data-id={{id}} class="eat">EAT</button>
+          <button data-id={{id}} type="button" class="eat btn">EAT</button>
         </div>
       </div>
 
@@ -43,8 +44,8 @@
   </div>
   <div class="row">
       <div class="col-md-12" id="new">
-    <input type="text" id="new_burger">
-    <button type="submit" id="burger">New Burger</button>
+    <input type="text" id="new_burger" placeholder="burger name">
+    <button type="submit" class="btn" id="burger">New Burger</button>
   </div>
   </div>
 
